--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,8 @@ body {
 }
 
 #mapid {
-    width: 100%;
+    width: 100vh;
+    margin: 10%;
 }
 
 .leaflet-popup-content-wrapper {
@@ -168,4 +169,24 @@ body {
 
 #slider {
     margin-top: 50px;
+}
+
+.page-footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100vh;
+    background-color: #333;
+    color: white;
+    text-align: center;
+}
+
+.page-footer a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
