--- a/css/style.css
+++ b/css/style.css
@@ -138,26 +138,7 @@ body {
     display: none;
 }
 
-#overlay {
-    /* position: absolute; */
-    z-index: 1000;
-    background: rgb(255, 2555, 255, 0.7);
-    padding: 4px;
-    right: 0;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 1px 1px 1px grey;
-    /* min-height: 200px; */
-}
-
-#overlay h2 {
-    margin: 0;
-    padding: 0;
-    margin-bottom: 10px;
-}
-
 footer {
-    /* position: fixed; */
     background-color: #333;
     color: white;
     padding: 10px;
@@ -198,4 +179,12 @@ select {
 
 .move .btn-secondary {
     margin-top: 2px;
+}
+
+.sources {
+    padding: 10px;
+}
+
+.sources li {
+    margin: 10px;
 }
